--- a/RogueWaveClassification/RogueWave_Classification_Results.ipynb
+++ b/RogueWaveClassification/RogueWave_Classification_Results.ipynb
@@ -15,7 +15,7 @@
    "metadata": {},
    "source": [
     "<div style=\"text-align: center;\">\n",
-    "  <img src=\"Results_github\\ocean_waves.jpg\" width=\"600\">\n",
+    "  <img src=\"ocean_waves.jpg\" width=\"600\">\n",
     "</div>\n",
     "\n",
     "[Source](https://oceanographicmagazine.com/news/rogue-wave-off-canada/)\n",
