--- a/RogueWaveClassification/RogueWave_Classification_Results.ipynb
+++ b/RogueWaveClassification/RogueWave_Classification_Results.ipynb
@@ -51,7 +51,7 @@
     "**An overview of the data window used and the subsequent rogue wave to be forecast is displayed through the illustration here. The forecast horizon $t_{horizon}$ is varied between 3,5 and 10 minutes and the length of the trainign window $t_{window}$ is varied between 15 and 20 minutes to investigate their respective effects on the rogue wave forecasting accuracy.**\n",
     "\n",
     "<div style=\"text-align: center;\">\n",
-    "  <img src=\"Slide3.jpg\" width=\"600\">\n",
+    "  <img src=\"Slide3.JPG\" width=\"600\">\n",
     "</div>"
    ]
   },
