--- a/RogueWaveClassification/RogueWave_Classification_Results.ipynb
+++ b/RogueWaveClassification/RogueWave_Classification_Results.ipynb
@@ -150,9 +150,9 @@
    "source": [
     "<table>\n",
     "  <tr>\n",
-    "    <td><img src = \"buoySystems_triangular_area\\3min\\Confusion_matrix_RWs_H_g_2_tadv_3min_0.5_scce_.png\" width=\"400\"> </td>\n",
-    "    <td><img src = \"buoySystems_triangular_area/3min/confusion_matrices_svm/RWs_H_g_2_tadv_3min_triangular_area_rw_0.5.jpg\" width=\"400\"> </td>\n",
-    "    <td><img src = \"buoySystems_triangular_area/3min/confusion_matrices_dt/RWs_H_g_2_tadv_3min_triangular_area_rw_0.5.jpg\" width=\"400\"> </td>\n",
+    "    <td><img src = \"triangular_area_Confusion_matrix_RWs_H_g_2_tadv_3min_0.5_scce_.png\" width=\"400\"> </td>\n",
+    "    <td><img src = \"svm_RWs_H_g_2_tadv_3min_triangular_area_rw_0.5.jpg\" width=\"400\"> </td>\n",
+    "    <td><img src = \"dt_RWs_H_g_2_tadv_3min_triangular_area_rw_0.5.jpg\" width=\"400\"> </td>\n",
     "  </tr>\n",
     "</table>\n",
     "\n",
@@ -179,8 +179,8 @@
    "source": [
     "<table>\n",
     "  <tr>\n",
-    "    <td><img src = \"Results_github\\accuracies_intermediate buoys.png\" width=\"500\"> </td>\n",
-    "    <td><img src = \"Results_github\\f1_scores_intermediate buoys.png\" width=\"500\"> </td>\n",
+    "    <td><img src = \"accuracies_intermediate buoys.png\" width=\"500\"> </td>\n",
+    "    <td><img src = \"f1_scores_intermediate buoys.png\" width=\"500\"> </td>\n",
     "  </tr>\n",
     "</table>\n",
     "\n",
