--- a/RogueWaveClassification/RogueWave_Classification_Results.ipynb
+++ b/RogueWaveClassification/RogueWave_Classification_Results.ipynb
@@ -140,7 +140,7 @@
    "id": "0d9b938a-8456-4953-97f4-32fece2349b1",
    "metadata": {},
    "source": [
-    "### In the first case, a group of three buoys were chosen as given [here](all_water_buoys_with_distance_triangular_area.html). For this, the models were trained using data from $d_{1}$ and $d_{2}$ and the model was tested on classifying rogue waves from data obtained from $s_{1}$. $d_{1}$ and $d_{2}$ are buoys located in deep water while $s_{1}$ is a shallow water buoy."
+    "### In the first case, a group of three buoys were chosen as given [here](https://samarpanchakraborty97.github.io/all_water_buoys_with_distance_triangular_area.html). For this, the models were trained using data from $d_{1}$ and $d_{2}$ and the model was tested on classifying rogue waves from data obtained from $s_{1}$. $d_{1}$ and $d_{2}$ are buoys located in deep water while $s_{1}$ is a shallow water buoy."
    ]
   },
   {
@@ -169,7 +169,7 @@
    "id": "92cbc72e-b6ad-4d2e-a382-a5b959807df6",
    "metadata": {},
    "source": [
-    "### In the second case, a group of five buoys were chosen as given [here](all_water_buoys_with_distance_localized.html). For this, the models were trained using data from $d_{1}$ to $d_{4}$ and the model was tested on classifying rogue waves from data obtained from $d_{5}$. $d_{5}$ is located closer to the shore while the other buoys are at more off-shore locations."
+    "### In the second case, a group of five buoys were chosen as given [here](https://samarpanchakraborty97.github.io/all_water_buoys_with_distance_localized.html). For this, the models were trained using data from $d_{1}$ to $d_{4}$ and the model was tested on classifying rogue waves from data obtained from $d_{5}$. $d_{5}$ is located closer to the shore while the other buoys are at more off-shore locations."
    ]
   },
   {
